--- a/es/notas-de-voz.html
+++ b/es/notas-de-voz.html
@@ -162,11 +162,11 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
+            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo Workep"></a>
             <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love"></i> by Workep</span>
+            <span class="madeby">Made with <i><img src="../images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
             <h4>Product</h4>
@@ -237,8 +237,8 @@
           <div class="foot5">
             <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt="hastag"></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt="E-mail"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
        
@@ -261,15 +261,15 @@
           </div>
           <div class="foot_bot_soc">
             <ul>
-              <li><a href="https://twitter.com/workep" target="_blank"><img src="images/twit.svg" alt="workep twitter"></a></li>
-              <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="images/fb.svg" alt="workep facebook"></a></li>
-              <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
+              <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/twit.svg" alt="workep twitter"></a></li>
+              <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="../images/fb.svg" alt="workep facebook"></a></li>
+              <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
           <div class="app_storelink">
             <ul>
-              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-              <li><a href="https://apps.apple.com/app/id1438404215"><img src="images/app_store.png" alt="workep iOS"></a></li>
+              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
+              <li><a href="https://apps.apple.com/app/id1438404215"><img src="../images/app_store.png" alt="workep iOS"></a></li>
             </ul>
           </div>
         </div>
