--- a/index.html
+++ b/index.html
@@ -536,7 +536,9 @@
         <div class="row">
           <div class="col-md-6">
             <div class="marketplace_video wistia_responsive_wrapper">
-              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
               <!-- <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span> -->
               <!-- <a href="#url" class="marketplace_video_btn"><img src="images/play-button.svg" alt="Market place google"></a> -->
             </div>
