--- a/competitors-airtable.html
+++ b/competitors-airtable.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Workep because it's better than Airtable discover it here!</title>
-   <meta name="description" content="Discover because Workep is the better response, to be more productive and efficient in your work. If your team need that, Learn more here it. ">
+    <meta name="description" content="Discover because Workep is the better response, to be more productive and efficient in your work. If your team need that, Learn more here it. ">
+      <link rel="canonical" href="https://workep.com/competitors-airtable.html">
      <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
     <!-- Bootstrap CSS -->
