--- a/competitors-basecamp.html
+++ b/competitors-basecamp.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Workep because it's better than Basecamp discover it here!</title>
     <meta name="description" content="Discover because Workep it's the app to PM software and complete integrated with G-Suite,  powerful in-app features, and one-click external collaboration.">
+    <link rel="canonical" href="https://workep.com/competitors-basecamp.html">  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
