--- a/consulting.html
+++ b/consulting.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep</title>
+    <title>Workep the best option for consulting services</title>
+    <meta name="description" content="professional services companies face large amounts of information and need a tool to keep all data together and prioritize. Workep is helps you focus on what really matters and focus on growing your consulting.">
+    <link rel="canonical" href="https://workep.com/consulting.html">     
      <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
     <!-- Bootstrap CSS -->
