--- a/es/budget-tracker.html
+++ b/es/budget-tracker.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Budget Traker la herramienta de administración del gasto que necesita</title>
       <meta name="description" content="Tome las riendas de sus finanzas con el planificador de presupuestos en línea de Workep. mida sus gastos y obtenga un futuro rentable.">
+      <link rel="canonical" href="https://workep.com/es/budget-tracker.html">
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <link rel="canonical" url="https://workep.com/es/budget-tracker.html">  
