--- a/es/casosdeuso.html
+++ b/es/casosdeuso.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
     <!-- Google indicator for language  -->
     <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
     <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel=“canonical” href=“https://workep.com/es/es.html” />
+    <link rel=“canonical” href=“https://workep.com/es/casosdeuso.html” />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
