--- a/es/competidor-monday.html
+++ b/es/competidor-monday.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Descubra por qué Workep supera la funcionalidad de Monday con un software totalmente integrado con G-Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic">  
 <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
-      <link rel="canonical" url="https://workep.com/es/competidor-jira.html">  
+      <link rel="canonical" url="https://workep.com/es/competidor-monday.html">  
       <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="../css/animate.css">
