--- a/es/consultoria.html
+++ b/es/consultoria.html
@@ -9,6 +9,7 @@
      <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
     <!-- Bootstrap CSS -->
+    <link rel="canonical" url="https://workep.com/es/consultoria.html">  
     <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/main.min.css">
