--- a/es/descargarapps.html
+++ b/es/descargarapps.html
@@ -3,6 +3,9 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <title> Descarga La App de Workep en la Apps store o Play store</title>
+    <meta name="description" content="Puedes descargar ya nuestra app desde la app store y la play store y empezar adisfrutar de la mejor experiencia de gestión de proyectos completamente integrada."/>  
+    <link rel="canonical" href="https://workep.com/es/descargarapps.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
