--- a/es/notas-de-voz.html
+++ b/es/notas-de-voz.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Notas de voz sobre la marcha de Workep</title>
+    <meta name="description" content="notas de voz sobre la marcha, deja notas de voz en las tareas para comunicarte rápidamente.con tu equipo y tener proyectos más ágiles."/>
+    <link rel="canonical" href="https://workep.com/es/notas-de-voz.html"/>  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
