--- a/es/workep-para-educacion.html
+++ b/es/workep-para-educacion.html
@@ -9,7 +9,7 @@
     <!-- Google indicator for language  -->
     <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
     <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel=“canonical” href=“https://workep.com/es/es.html” />
+    <link rel=“canonical” href=“https://workep.com/es/workep-para-educacion.html” />
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
