--- a/external-collaboration.html
+++ b/external-collaboration.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>External Collaboration on Workep</title>
-        
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+    <link rel="canonical" href="https://workep.com/external-collaboration.html"/>    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
