--- a/gantt-chart.html
+++ b/gantt-chart.html
@@ -7,6 +7,7 @@
     <title>Automated Gantt Chart on Workep</title>
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+    <link rel="canonical" href="https://workep.com/gantt-chart.html"/>    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -57,7 +58,10 @@
     <div class="container">
       <div class="time_tracker_pgsec1_in">
         <div class="tt_video_box">
-          <!--<figure class="tt_video_box_iframe">
+          <video width="100%" height="auto" autoplay="" loop="" muted="" playsinline="">
+            <source src="images/gifts/cross-team-collaboration.webm" type="video/webm">
+          </video>
+            <!--<figure class="tt_video_box_iframe">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vXHLTV0wx8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </figure>
           <figcaption>
