--- a/gmail-add-on.html
+++ b/gmail-add-on.html
@@ -7,6 +7,7 @@
     <title>Gmail add on Workep</title>
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+    <link rel="canonical" href="https://workep.com/gmail-add-on.html"/>     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
