--- a/marketing.html
+++ b/marketing.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep</title>
+    <title>Workep for creative agencies</title>
+    <meta name="description" content="workep for creative agencies and digital marketing agencies. Everything you need to manage your projects and team tasks, collaboration, agility and structure.">
+    <link rel="canonical" href="https://workep.com/marketing.html"/>
      <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
     <!-- Bootstrap CSS -->
