--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -1,49 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Required meta tags -->
+  <title>Workep For Education</title>    
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">    
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-  <!-- Google indicator for language  -->
-  <link rel="alternate" hreflang="en" href="https://workep.com/" />
-  <link rel="canonical" href="https://workep.com/" />
-
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
-  <!-- End Google Tag Manager -->
-
-
-  <!-- End Google Tag Manager -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
-  <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
-  <link rel="author" href="https://workep.com" />
-  <!-- FB Meta tags -->
+  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">    
+ <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg"/>
   <meta property="og:url" content="https://workep.com"/>
   <meta property="og:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite"/>
-
   <!-- Twitter tags -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@workep" />
   <meta name="twitter:title" content="Workep: Rebuilding the project management experience" />
   <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
   <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
-
-  <title>Workep For Education</title>
-
+    
+  <link rel="alternate" hreflang="en" href="https://workep.com/" />
+  <link rel="canonical" href="https://workep.com/workep-for-education.html" />
+  <link rel="author" href="https://workep.com" />
   <!-- Page icon -->
   <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/easy-responsive-tabs.css">
   <link rel="stylesheet" href="css/animate.css">
@@ -53,8 +33,14 @@
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
-
-
+ 
+    <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
+  <!-- End Google Tag Manager -->
 </head>
   <body class="partners-page">
     <!-- Google Tag Manager (noscript) -->
