--- a/competitors-jira.html
+++ b/competitors-jira.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Workep because it's better than Jira discover it here!</title>
     <meta name="description" content="Find out why Workep surpasses Jira's functionality with fully integrated software with G-Suite, powerful in-app functions, and one-click external collaboration.">
-  
+    <link rel="canonical" href="https://workep.com/competitors-jira.html">  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
