--- a/competitors-trello.html
+++ b/competitors-trello.html
@@ -7,7 +7,7 @@
     <title>Workep because it's better than Trello discover it here!</title>
      <meta name="description" content="Find out why Workep surpasses Trello's functionality with fully integrated software with G-Suite, powerful in-app functions, and one-click external collaboration."> 
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
-      
+    <link rel="canonical" href="https://workep.com/competitors-trello.html">  
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.min.css">
