--- a/downloadapps.html
+++ b/downloadapps.html
@@ -4,10 +4,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
   <!-- Google indicator for language  -->
   <link rel="alternate" hreflang="en" href="https://workep.com/" />
-  <link rel="canonical" href="https://workep.com/" />
+  <link rel="canonical" href="https://workep.com/downloadapps.html"/>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
