--- a/es/marketing.html
+++ b/es/marketing.html
@@ -7,7 +7,8 @@
     <title>Workep es la herramienta que su compañía de marketing necesita</title>
     <meta name="description" content="Descubra porque Workep es la mejor respuesta, para ser más productivo y eficiente en su trabajo. Y es lo que su compañía creativa o agencia de marketing necesita.">  
      <!-- Page icon -->
-    <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
+    <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+    <link rel="canonical" url="https://workep.com/es/marketing.html">  
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="../css/animate.css">
