--- a/voice-notes.html
+++ b/voice-notes.html
@@ -8,6 +8,7 @@
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
+    <link rel="canonical" href="https://workep.com/voice-notes.html" />   
     <link rel="stylesheet" href="css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.min.css">
