--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
           <div class="col-md-6">
             <div class="marketplace_video wistia_responsive_wrapper">
               <!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
-                
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7DHmD2YM1_M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <!-- <span class="wistia_embed wistia_async_anuee2yism popover=true popoverAnimateThumbnail=true" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span> -->
               <!-- <a href="#url" class="marketplace_video_btn"><img src="images/play-button.svg" alt="Market place google"></a> -->
             </div>
@@ -577,7 +577,7 @@
       </div>
     </div>
   </div>
-  
+
 <div class="lovedby_thousand common_gap lovedby_thousand_indexbg">
     <div class="container">
       <div class="section_title">
@@ -751,6 +751,7 @@
               <li><a href="https://workep.com/pricing.html">Pricing</a></li>
               <li><a href="https://angel.co/workep/jobs">Careers</a></li>
               <li><a href="https://workep.com/partners.html">Partners</a></li>
+              <li><a href="#">Competitors</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
