meta description duplicated
meta description duplicate and update robots.txt

--- a/budget-tracker.html
+++ b/budget-tracker.html
@@ -181,7 +181,7 @@
             <h4>Workep</h4>
             <ul class="links_all">
               <li><a href="https://workep.com/pricing.html">Pricing</a></li>
-              <li><a href="https://angel.co/workep/jobs">Careers</a></li>
+              <!--<li><a href="https://angel.co/workep/jobs">Careers</a></li>-->
               <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
