--- a/downloadapps.html
+++ b/downloadapps.html
@@ -19,7 +19,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
+  <meta name="description" content="Download Workep on the apps store organize anything! And enjoy on your Androind or IOS. Workep is available on all your devices. Try for free today! ">
   <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
