--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,8 +20,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
-  <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
+  <meta name="description" content="Workep complies with the principles of the EU- U.S. Privacy Shield in relation to the collection, use, exchange, and retention of personal information">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
