--- a/product.html
+++ b/product.html
@@ -22,7 +22,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
+  <meta name="description" content="Welcome to Workep: the cross-enterprise collaboration tool that's pleasant, easy to use
+and fully integrated within G Suite. clic and take a look.">
   <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
