--- a/terms.html
+++ b/terms.html
@@ -22,7 +22,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
+  <meta name="description" content="Workep have prepared a couple clauses to protect you and to protect us. We tried to keep it simple. This agreement is effective: May 25, 2018. take a look.">
   <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
