--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">    
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">    
+  <meta name="description" content="Enable collaboration in the classrom with Workep. Make it easier for students and teachers to work together in group projects by providing a platform">    
  <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
   <meta property="og:type" content="website"/>
