--- a/competitors-airtable.html
+++ b/competitors-airtable.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="css/theme.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/dics.original.css">
+    
+      <!--<link rel="stylesheet" href="css/dics.original.css">-->
+      
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.competitors.css">
  </head>
