--- a/partners.html
+++ b/partners.html
@@ -20,7 +20,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
+  <meta name="description" content="Improve your portfolio and G Suite adoption by offering a new Project Management tool to your existing customers. Fast, easy to use and integrated with Google">
   <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
