--- a/pricing.html
+++ b/pricing.html
@@ -135,6 +135,7 @@
     <div class="jwg_slider_module" id="horizontalTab">
           <div class="pricing_sec_top tabbed_navigation">
             <ul class="row resp-tabs-list">
+                <li class="col-lg-2 col-md-6"></li>
               <li class="col-lg-4 col-md-6">
                 <div class="pricing_box lite_plan">
                   <div class="pricing_boxT">
@@ -154,7 +155,7 @@
               </li>
               <li class="col-lg-4 col-md-6">
                <div class="pricing_box">
-                  <span class="mostpoular_tg">Most Popular</span>
+                  <!--<span class="mostpoular_tg">Most Popular</span>-->
                   <div class="pricing_boxT">
                     <h4>Growth</h4>
                     <p>For companies that need to go above and beyond.</p>
@@ -171,7 +172,8 @@
                   </div>
                 </div>
               </li>
-              <li class="col-lg-4 col-md-6">
+                <li class="col-lg-2 col-md-6"></li>
+              <!--<li class="col-lg-4 col-md-6">
                 <div class="pricing_box">
 
                   <div class="pricing_boxT">
@@ -189,7 +191,7 @@
                     <a href="https://app.workep.com/login"><span>Contact Sales</span></a>
                   </div>
                 </div>
-              </li>
+              </li>-->
             </ul>
           </div>
 
@@ -226,9 +228,7 @@
                     </li>
                     <li>
                       <div class="prod_feature_box">
-                        <span class="plan_tag">Advanced with Growth</span>
                         <figure>
-
                           <img src="images/templates.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
@@ -252,13 +252,13 @@
                     </li>
                     <li>
                       <div class="prod_feature_box">
-                        <span class="plan_tag">Advanced with Growth</span>
+                        <span class="plan_tag">Growth</span>
                         <figure>
-                          <img src="images/support.png" alt="">
+                          <img src="images/cost-grey.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Support</h4>
-                        <p> For High Priorities</p>
+                        <h4>Expense Traker</h4>
+                        <p> For save money</p>
                       </div>
                       </div>
                     </li>
@@ -268,9 +268,8 @@
                   <ul>
                     <li>
                       <div class="prod_feature_box">
-                         <span class="plan_tag">Growth</span>
                         <figure>
-                          <img src="images/multipleteams-b-w.png" alt="">
+                          <img src="images/multipleteams.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Multiple Teams</h4>
@@ -291,12 +290,12 @@
                     </li>
                     <li>
                       <div class="prod_feature_box">
-                         <span class="plan_tag">Growth</span>
                         <figure>
-                          <img src="images/rolesb-w.png" alt="">
+                          <img src="images/roles.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
+                        <p>To admin easy</p>       
                       </div>
 
                       </div>
@@ -313,10 +312,20 @@
 
                       </div>
                     </li>
-
+                      <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="images/support.png" alt="">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Support</h4>
+                        <p> For High Priorities</p>
+                      </div>
+                      </div>
+                    </li>
                   </ul>
                 </div>
-                <div class="prod_feature_block prod_feature_block_3nd">
+                <!--<div class="prod_feature_block prod_feature_block_3nd">
                   <ul>
                     <li>
                       <div class="prod_feature_box">
@@ -372,7 +381,7 @@
                     </li>
 
                   </ul>
-                </div>
+                </div>-->
               </div>
             </div>
             <div class="slide">
@@ -382,7 +391,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/gsuite.png" alt="">
+                          <img src="images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>GSuite</h4>
@@ -390,21 +399,10 @@
                       </div>
                       </div>
                     </li>
-                    <li>
+                       <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/gantt.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Gantt Chart</h4>
-                        <p> Automatic & Visual</p>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/templates.png" alt="">
+                          <img src="images/templates.png" alt="project templates">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Templates</h4>
@@ -412,21 +410,33 @@
                       </div>
                       </div>
                     </li>
-                    <li>
+                      <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/timetracker.png" alt="">
+                          <img src="images/multipleteams.png" alt="multiple teams">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Time Tracker</h4>
-                        <p> For Your Task</p>
+                        <h4>Multiple Teams</h4>
+                        <p>For collaborate with others</p>    
                       </div>
+                      </div>
+                    </li>
+                     <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="images/roles.png" alt="admin role">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Roles</h4>
+                        <p>To admin easy</p>    
+                      </div>
+
                       </div>
                     </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/support.png" alt="">
+                          <img src="images/support.png" alt="support and assistance">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Support</h4>
@@ -436,54 +446,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="prod_feature_block prod_feature_block_2nd">
-                  <ul>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/multipleteams.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Multiple Teams</h4>
-                      </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/cost.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Cost Management</h4>
-                       </div>
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/roles.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Roles</h4>
-                      </div>
-
-                      </div>
-                    </li>
-                    <li>
-                      <div class="prod_feature_box">
-                        <figure>
-                          <img src="images/marketplace.png" alt="">
-                        </figure>
-                        <div class="prod_feature_box_text">
-                        <h4>Marketplace</h4>
-                      </div>
-
-                      </div>
-                    </li>
-
-                  </ul>
-                </div>
-                <div class="prod_feature_block prod_feature_block_3nd">
+                <!--<div class="prod_feature_block prod_feature_block_3nd">
                   <ul>
                     <li>
                       <div class="prod_feature_box">
@@ -540,7 +503,7 @@
                     </li>
 
                   </ul>
-                </div>
+                </div>-->
               </div>
             </div>
             <div class="slide">
@@ -550,7 +513,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/gsuite.png" alt="">
+                          <img src="images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>GSuite</h4>
@@ -561,7 +524,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/gantt.png" alt="">
+                          <img src="images/gantt.png" alt="Gantt chartt">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Gantt Chart</h4>
@@ -572,7 +535,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/templates.png" alt="">
+                          <img src="images/templates.png" alt="Project templates">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Templates</h4>
@@ -583,7 +546,7 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/timetracker.png" alt="">
+                          <img src="images/timetracker.png" alt="Expense traker">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Time Tracker</h4>
@@ -594,11 +557,11 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/support.png" alt="">
+                          <img src="images/cost.png" alt="Expense traker">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Support</h4>
-                        <p> For High Priorities</p>
+                        <h4>Expense traker</h4>
+                        <p>For save money</p>
                       </div>
                       </div>
                     </li>
@@ -609,20 +572,22 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/multipleteams.png" alt="">
+                          <img src="images/multipleteams.png" alt="multiple teams">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Multiple Teams</h4>
+                        <p>For collaborate with others</p>    
                       </div>
                       </div>
                     </li>
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/cost.png" alt="">
+                          <img src="images/cost.png" alt="Coast management">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Cost Management</h4>
+                        <p>Control on the money</p>    
                       </div>
 
                       </div>
@@ -630,10 +595,11 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/roles.png" alt="">
+                          <img src="images/roles.png" alt="roles">
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
+                        <p>To admin easy</p>    
                       </div>
 
                       </div>
@@ -641,18 +607,28 @@
                     <li>
                       <div class="prod_feature_box">
                         <figure>
-                          <img src="images/marketplace.png" alt="">
+                          <img src="images/marketplace.png" alt="market place">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Marketplace</h4>
+                        <h4>Marketplace...</h4>
+                        <p>To active Power ups</p>    
                       </div>
-
                       </div>
                     </li>
-
+                    <li>
+                      <div class="prod_feature_box">
+                        <figure>
+                          <img src="images/support.png" alt="support and assistance">
+                        </figure>
+                        <div class="prod_feature_box_text">
+                        <h4>Support</h4>
+                        <p> For High Priorities</p>
+                      </div>
+                      </div>
+                    </li>        
                   </ul>
                 </div>
-                <div class="prod_feature_block prod_feature_block_3nd">
+                <!--<div class="prod_feature_block prod_feature_block_3nd">
                   <ul>
                     <li>
                       <div class="prod_feature_box">
@@ -705,15 +681,11 @@
                     </li>
 
                   </ul>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
-
-
     </div>
-
-
   </div>
 </div>
 
@@ -804,7 +776,7 @@
         <div class="col-md-6">
           <div class="marketplace_rt_content">
             <span class="marketplace_tag">
-              <img src="images/group-9.png" alt="">
+              <img src="images/group-9.png" alt="Google market place">
               Google Marketplace
             </span>
             <h4 class="title_txt">#1 in the Google Marketplace</h4>
