--- a/pricing.html
+++ b/pricing.html
@@ -208,8 +208,8 @@
                           <img src="images/gsuite.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
-                          <h4>GSuite</h4>
-                          <p> Integration</p>
+                          <h4>G Suite</h4>
+                          <p>Files, Calendar, and more</p>
                         </div>
                       </div>
                     </li>
@@ -226,7 +226,7 @@
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="images/templates.png" alt="">
@@ -236,7 +236,7 @@
                         <p> For Your Project</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <span class="plan_tag">Growth</span>
@@ -246,7 +246,7 @@
                         <div class="prod_feature_box_text">
 
                          <h4>Time Tracker</h4>
-                        <p>For Your Task</p>
+                        <p>Estimate tasks</p>
                       </div>
                       </div>
                     </li>
@@ -257,8 +257,8 @@
                           <img src="images/cost-grey.png" alt="">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Expense Traker</h4>
-                        <p> For save money</p>
+                        <h4>Expense Tracker</h4>
+                        <p>Monitoring of expenses</p>
                       </div>
                       </div>
                     </li>
@@ -273,10 +273,11 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Multiple Teams</h4>
+                        <p>Structured and collaborative work</p>
                         </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                          <span class="plan_tag">Growth</span>
                         <figure>
@@ -287,7 +288,7 @@
                       </div>
 
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -295,7 +296,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>To admin easy</p>       
+                        <p>Permissions management</p>       
                       </div>
 
                       </div>
@@ -308,6 +309,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Marketplace</h4>
+                        <p>Integrated Add-Ons</p>    
                       </div>
 
                       </div>
@@ -319,7 +321,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Support</h4>
-                        <p> For High Priorities</p>
+                        <p>Information and assistance</p>
                       </div>
                       </div>
                     </li>
@@ -394,12 +396,12 @@
                           <img src="images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>GSuite</h4>
-                        <p> Integration</p>
+                        <h4>G Suite</h4>
+                        <p> Files, Calendar, and more</p>
                       </div>
                       </div>
                     </li>
-                       <li>
+                       <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="images/templates.png" alt="project templates">
@@ -409,7 +411,7 @@
                         <p> For Your Project</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                       <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -417,7 +419,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Multiple Teams</h4>
-                        <p>For collaborate with others</p>    
+                        <p>Structured and collaborative work</p>    
                       </div>
                       </div>
                     </li>
@@ -428,7 +430,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>To admin easy</p>    
+                        <p>Permissions management.</p>    
                       </div>
 
                       </div>
@@ -440,7 +442,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Support</h4>
-                        <p> For High Priorities</p>
+                        <p>Information and assistance</p>
                       </div>
                       </div>
                     </li>
@@ -516,8 +518,8 @@
                           <img src="images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>GSuite</h4>
-                        <p> Integration</p>
+                        <h4>G Suite</h4>
+                        <p> Files, Calendar, and more</p>
                       </div>
                       </div>
                     </li>
@@ -532,7 +534,7 @@
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="images/templates.png" alt="Project templates">
@@ -542,7 +544,7 @@
                         <p> For Your Project</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -550,7 +552,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Time Tracker</h4>
-                        <p> For Your Task</p>
+                        <p>Estimate tasks</p>
                       </div>
                       </div>
                     </li>
@@ -560,7 +562,7 @@
                           <img src="images/cost.png" alt="Expense traker">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Expense traker</h4>
+                        <h4>Expense tracker</h4>
                         <p>For save money</p>
                       </div>
                       </div>
@@ -576,11 +578,11 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Multiple Teams</h4>
-                        <p>For collaborate with others</p>    
+                        <p>Structured and collaborative work</p>    
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="images/cost.png" alt="Coast management">
@@ -591,7 +593,7 @@
                       </div>
 
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -599,7 +601,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>To admin easy</p>    
+                        <p>Permissions management</p>    
                       </div>
 
                       </div>
@@ -610,8 +612,8 @@
                           <img src="images/marketplace.png" alt="market place">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Marketplace...</h4>
-                        <p>To active Power ups</p>    
+                        <h4>Marketplace</h4>
+                        <p>Integrated Add-Ons</p>    
                       </div>
                       </div>
                     </li>
@@ -622,7 +624,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Support</h4>
-                        <p> For High Priorities</p>
+                        <p>Information and assistance</p>
                       </div>
                       </div>
                     </li>        
